# Fluid-C

./: .gitignore  CMakeLists.txt  Makefile  README.md  aknowlogments.md  main.py  package.json  pnpm-lock.yaml  register.js  requirements.txt  setup.py  testy.json  tsconfig.json  wasmer.toml
.devcontainer/: devcontainer.json
Fluid-IDE/: AppController.h  AppController.m  CustomTextView.h  CustomTextView.m  Fluid-IDEInfo.plist  Fluid-IDE_main.m  GNUmakefile  GNUmakefile~
Fluid-IDE/Fluid-IDE.pcproj/: PC.project  miguel.project
Fluid-IDE/Fluid-IDE.pcproj.backup/: miguel.project
Scripts/: MiniParser.gyat  miniCompiler.sh  test1.coffee
Scripts/tests/: index.test.ts  testlang.test.ts  tsconfig.json
assembly/: index.ts  main.wat  tsconfig.json  wasi-cli.py
cmake/: FindCython.cmake
examples/: hello.cpp
lang/FlameScript/src/: main.rs
lang/cli/: main.php  main.py
lang/flamescript/: flames.v  flm.mjs  grammar.pegjs
lang/fluidscripten-vscode/: markin.language-configuration.json
lang/fluidscripten-vscode/src/: extension.ts
lang/fluidscripten-vscode/syntax/: markin.tmLanguage.json
lang/include/: FluidLib.h
lang/markin/: grammar.pegjs  marked.pegjs  markedSchema.json  markin.mjs
lib/: Cython.h  FluidC++.hpp  Fluidobj.hpp  Foundation.hpp  GSHeaders.m  langf.h  stdlib.mml
obj-fpp/: main.swift
obj-fpp/Source/: parser.m
source/: cli.cpp  cli.hpp  comp.ab
source/aleng/: aleng.pegjs  main.mjs  package-lock.json  package.json
src/: LibCompiler.c  LibCompiler.pyx  ObjectiveFPreprocessor.c  ObjectiveFPreprocessor.pyx  Parser.pyx  compiler.cpp  compiler.h
